<resources>
    <string name="app_name">Music_Player</string>
    <string name="open">open\n</string>
    <string name="close">close</string>
    <string name="theme">THEME</string>
    <string name="record">RECORD</string>
    <string name="setting">SETTING</string>
    <string name="mp3_cutter">MP3 CUTTER</string>
    <string name="timer">TIMER</string>
    <string name="drive_mode">DRIVE MODE</string>
    <string name="queue">QUEUE</string>
    <string name="playlist">PLAYLIST</string>
    <string name="equalizer">EQUALIZER</string>
    <string name="library">LIBRARY</string>
    <string name="song">SONG</string>
    <string name="album">AlBUM</string>
    <string name="artist">ARTIST</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="folder">FOLDER</string>
    <string name="video">VIDEO</string>
    <string name="recent">RECENT</string>
    <string name="genres">GENRES</string>
    <string name="mini_tracks">MINI TRACKS</string>
    <string name="year">YEAR</string>
    <string name="composer">COMPOSER</string>
</resources>